Added google trace code.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,6 +41,16 @@
 		<div class="footer">
 			© Up Chen <a href="mailto:wallat@gmail.com">wallat@gmail.com</a>
 		</div>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-56840783-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-56840783-1');
+		</script>
 	</body>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 </html>
